# android-pathfinding

./: .gitignore  README.md  android_pathfinding.jks  settings.gradle
app/: build.gradle
app/src/androidTest/java/run/ccfish/android/gif/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/run/ccfish/android/pathfinding/test/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/run/ccfish/android/gif/: ExampleUnitTest.java
pathfinding/: build.gradle  proguard-rules.pro
pathfinding/src/main/: AndroidManifest.xml
pathfinding/src/main/java/run/ccfish/android/pathfinding/: PathFinding.java
pathfinding/src/main/jni/android-pathfinding/: Cargo.toml  build.cmd
pathfinding/src/main/jni/android-pathfinding/.cargo/: config
pathfinding/src/main/jni/android-pathfinding/src/: lib.rs  pathfinding.rs
