[package]
name = "android-pathfinding"
version = "1.0.0"
authors = ["JiaYe"]
edition = "2021"

[dependencies]
log = "0.4.14"
android_logger = "0.10.1"
jni = { version = "0.19.0", default-features = false }
anyhow = "1.0"
once_cell = "1.8.0"
hierarchical_pathfinding = { version="0.5.0", default-features = false }

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
panic = 'abort'
opt-level = 's'
